# ayon-mle-krita

./: LICENSE  create_package.py  package.py  pyproject.toml  ruff.toml
server/: __init__.py  settings.py
