# WARNING: This file is used only for development done on this addon.
# Be aware that dependencies used here might not match the ones used by
# the specific addon bundle set up on the AYON server. This file should
# be used only for local development and CI/CD purposes. To define addon
# dependencies, use pyproject.toml file in the `client` directory.


[project]
name = "ayon-mle-krita"
version = "0.1.0"
description = "Magic Lantern Workbench AYON Addon for Krita"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "codespell",
    "ruff ~= 0.11.4",
    "flake8",
    "mypy", 
    "isort", 
    "pre-commit"
]
